[gd_scene load_steps=8 format=3 uid="uid://dpuypqbvddock"]

[ext_resource type="Script" path="res://game.gd" id="1_15ndw"]
[ext_resource type="Script" path="res://Player.gd" id="1_kqmfn"]
[ext_resource type="Theme" uid="uid://d172p8yut0xgq" path="res://ILikeThisFont.tres" id="3_ctx5y"]
[ext_resource type="PackedScene" uid="uid://n1arhf22bbvf" path="res://obstacle.tscn" id="4_s4ved"]
[ext_resource type="AudioStream" uid="uid://bvuet1jc4ty03" path="res://assets/bgsong.mp3" id="5_ewrfp"]

[sub_resource type="CanvasTexture" id="CanvasTexture_r8eed"]

[sub_resource type="CanvasTexture" id="CanvasTexture_1evro"]

[node name="Game" type="Node"]
script = ExtResource("1_15ndw")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(561, 1606)
scale = Vector2(0.3, 0.3)
script = ExtResource("1_kqmfn")
metadata/_edit_group_ = true

[node name="Polygon2D" type="Polygon2D" parent="CharacterBody2D"]
position = Vector2(-399, -1019)
color = Color(1, 1, 0.231373, 1)
texture = SubResource("CanvasTexture_r8eed")
polygon = PackedVector2Array(318, 1069, 487, 1070, 395, 917)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CharacterBody2D"]
position = Vector2(-18, -349)
polygon = PackedVector2Array(102.794, 397.922, -60.2056, 396.922, 14.7944, 247.922)

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(1090.68, 0)
scale = Vector2(-1087.68, 2396.64)
texture_normal = SubResource("CanvasTexture_1evro")
action = "screen_touched"
metadata/_edit_lock_ = true

[node name="Obstacle" parent="." instance=ExtResource("4_s4ved")]
position = Vector2(-286, 107)

[node name="Timer" type="Timer" parent="Obstacle"]
wait_time = 4.0
autostart = true

[node name="RestartUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Score" type="Label" parent="RestartUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.5
offset_top = 87.0
offset_right = 34.5
offset_bottom = 201.0
grow_horizontal = 2
theme = ExtResource("3_ctx5y")
theme_override_font_sizes/font_size = 92
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="RestartUI/Score"]
autostart = true

[node name="Button" type="Button" parent="RestartUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = -72.5
offset_right = 305.0
offset_bottom = 72.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ctx5y")
theme_override_font_sizes/font_size = 114
text = "Restart"

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ewrfp")
autoplay = true

[connection signal="released" from="TouchScreenButton" to="CharacterBody2D" method="_on_touch_screen_button_released"]
[connection signal="timeout" from="Obstacle/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RestartUI/Score/Timer" to="CharacterBody2D" method="_on_timer_timeout"]
[connection signal="pressed" from="RestartUI/Button" to="." method="_on_button_pressed"]
